--- a/index.htm
+++ b/index.htm
@@ -1,26 +1,15 @@
 <html>
 <head>
     <title>Force Directed Graph</title>
-    <script src="lib/jquery.min.js"></script>
-    <script src="lib/d3.min.js"></script>
-    <script src="src/config.js"></script>
-    <script src="src/dataHandler.js"></script>
-    <script src="src/chart.js"></script>
-    <script src="src/main.js"></script>
-    <style>
-
-.node {
-  stroke: #fff;
-  stroke-width: 1.5px;
-}
-
-.link {
-  stroke: #999;
-  stroke-opacity: .6;
-}
-
-</style>
-
+    <script src="js/lib/jquery.min.js"></script>
+    <script src="js/lib/d3.min.js"></script>
+    <script src="js/src/config.js"></script>
+    <script src="js/src/dataHandler.js"></script>
+    <script src="js/src/chart.js"></script>
+    <script src="js/src/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    
 </head>
-<body></body>
+<body
+></body>
 </html>
